# ImageProc

./: .gitignore  CMakeLists.txt  README.md
src/: filter.cpp  filter.h  imageproc.cpp  util.cpp  util.h
